<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="false"
            android:icon="@drawable/home"
            android:title="@string/txt_drawer_home" />
        <item
            android:id="@+id/nav_connect"
            android:icon="@drawable/connect"
            android:title="@string/txt_drawer_connect_app_devices" />
        <item
            android:id="@+id/nav_redeem"
            android:icon="@drawable/redeem"
            android:title="@string/txt_drawer_redeem_points" />
        <item
            android:id="@+id/nav_my_cart"
            android:icon="@drawable/my_cart"
            android:title="@string/txt_drawer_my_cart" />
        <item
            android:id="@+id/nav_my_account"
            android:icon="@drawable/user"
            android:title="@string/txt_drawer_my_account" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/setting"
            android:title="@string/txt_drawer_settings" />
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/favourte"
            android:title="@string/txt_drawer_favourites" />
        <item
            android:id="@+id/nav_invite"
            android:icon="@drawable/forma"
            android:title="@string/txt_drawer_invite_earn" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help"
            android:title="@string/txt_drawer_help_support" />
    </group>
</menu>
